[FEATURE][WED-27] Add customization menu on mobile, fix callback to check if lateral menu is visible or not

--- a/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-experience-desktop.scss
+++ b/engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/customization_experience/_customization-experience-desktop.scss
@@ -16,6 +16,7 @@
 
     h1 {
       max-width: 240px;
+      text-align: left;
     }
 
     .start-over {
